tests/fixtures/diagnostics/compile-import-chain.ascii.stderr
DEPRECATION WARNING [import]: Sass @import rules are deprecated and will be removed in Dart Sass 3.0.0.

More info and automated migrator: https://sass-lang.com/d/import

  ,
1 | @import "liberr3";
  |         ^^^^^^^^^
  '
    compile-import-chain.scss 1:9  root stylesheet

Error: Undefined variable.
  ,
2 |   color: $missing-in-lib;
  |          ^^^^^^^^^^^^^^^
  '
  _liberr3.scss 2:10             @import
  compile-import-chain.scss 1:9  root stylesheet
